[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/DarkForest-wallpaper.jpg" type="Texture" id=1]
[ext_resource path="res://images/Sprite - Female Pink Hair Starter Pack/Sprite F PinkH Professional Smile01.png" type="Texture" id=2]
[ext_resource path="res://fonts/SourceCodePro_FontsOnly-1.009/SourceCodePro-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/talk.gd" type="Script" id=4]
[ext_resource path="res://fonts/SourceCodePro_FontsOnly-1.009/SourceCodePro-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[node name="talk" type="Node"]
script = ExtResource( 4 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character" type="TextureRect" parent="."]
margin_left = 315.0
margin_top = 84.0
margin_right = 749.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_box" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 420.0
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue" type="Label" parent="dialogue_box"]
margin_left = 20.0
margin_top = 20.0
margin_right = 984.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.984314, 0.0313726, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.968627, 0.384314, 0.129412, 1 )
text = "Hello World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Button" parent="."]
margin_left = 10.0
margin_top = 350.0
margin_right = 275.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 2 )
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Button" parent="."]
margin_left = 749.0
margin_top = 350.0
margin_right = 1014.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 3 )
text = "RIGHT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="left" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="right" to="." method="_on_no_pressed"]
